tests/resources/invalid/type/class/args_and_init.mamba
class MyClass(arg1: SomeType)
    def init(self) => pass
